add flag "toUppercase" to configuration options fix handling of configuration options of type String[] use configuration injection for ARTCPA, ExplicitAnalysisCPA, LogManager, StubConfiguration option "explicitAnalysis.threshold" is now "cpas.explicit.threshold" fix some left-over "analysis.cpas" options in the properties files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1139 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/alwaysTopAnalysis.properties
+++ b/test/config/alwaysTopAnalysis.properties
@@ -60,7 +60,7 @@ analysis.traversal = topsort
 cpa = compositeCPA.CompositeCPA
  
 # which CPAs should be contained in the CompositeCPA?
-analysis.cpas = cpa.location.LocationCPA, cpa.alwaystop.AlwaysTopCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.alwaystop.AlwaysTopCPA
 
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
