--- a/test/config/explicitAnalysisJoin.properties
+++ b/test/config/explicitAnalysisJoin.properties
@@ -60,10 +60,12 @@ analysis.traversal = topsort
 cpa = compositeCPA.CompositeCPA
  
 # which CPAs should be contained in the CompositeCPA?
-analysis.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.errorlocation.ErrorLocationCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.errorlocation.ErrorLocationCPA
 
 # which merge operator to use for the explicit analysis CPA?
 cpas.explicit.merge = join
+
+cpas.explicit.threshold = 2000
 
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
@@ -71,5 +73,3 @@ cfa.removeIrrelevantForErrorLocations = true
 
 # use location mapped reached set
 cpa.useSpecializedReachedSet = true
-
-explicitAnalysis.threshold = 2000
