--- a/test/config/pointerAnalysis.properties
+++ b/test/config/pointerAnalysis.properties
@@ -72,6 +72,8 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.types.TypesCPA, cpa.explicit.E
 # which merge operator to use for the explicit analysis CPA?
 cpas.explicit.merge = sep
 
+cpas.explicit.threshold = 10
+
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
 cfa.removeIrrelevantForErrorLocations = false
@@ -81,5 +83,3 @@ cpa.useSpecializedReachedSet = true
 
 # print a warning whenever a dangerous pointer operation is executed
 pointerAnalysis.printWarnings = true
-
-explicitAnalysis.threshold = 10
