use configuration injection in PointerAnalysisCPA remove static access to CPAchecker.{logger,config}
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1144 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/pointerAnalysis.properties
+++ b/test/config/pointerAnalysis.properties
@@ -82,4 +82,4 @@ cfa.removeIrrelevantForErrorLocations = false
 cpa.useSpecializedReachedSet = true
 
 # print a warning whenever a dangerous pointer operation is executed
-pointerAnalysis.printWarnings = true
+cpas.pointeranalysis.printWarnings = true
