--- a/build.xml
+++ b/build.xml
@@ -15,9 +15,9 @@
         <path refid="org.eclipse.pde.core.requiredPlugins.libraryclasspath"/>
         <fileset dir="lib" includes="*.jar"/>
         <!-- Your eclipse plugin directory: do export ECLIPSE_HOME=<where eclipse is> -->
-	<fileset dir="${env.ECLIPSE_HOME}/plugins" includes="*.jar"/>
-	<fileset dir="${env.ECLIPSE_HOME}/plugins" includes="*junit4*/*.jar"/>
-	<fileset dir="${env.ECLIPSE_HOME}/plugins" includes="org.hamcrest*.jar"/>
+	<!--<fileset dir="${env.ECLIPSE_HOME}/plugins" includes="*.jar"/>-->
+	<!--<fileset dir="${env.ECLIPSE_HOME}/plugins" includes="*junit4*/*.jar"/>-->
+	<!--<fileset dir="${env.ECLIPSE_HOME}/plugins" includes="org.hamcrest*.jar"/>-->
     </path>
     <target name="init">
         <mkdir dir="bin"/>
@@ -43,34 +43,37 @@
             <classpath refid="CPAchecker.classpath"/>
         </javac>
     </target>
-    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
-    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
-        <copy todir="${ant.library.dir}">
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </copy>
-        <unzip dest="${ant.library.dir}">
-            <patternset includes="jdtCompilerAdapter.jar"/>
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </unzip>
-    </target>
-    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
-        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
-        <antcall target="build"/>
-    </target>
-   <target description="Run all JUnit tests" depends="build" name="tests">
-        <property name="test.report.dir" value="test/output" />
-	<mkdir dir="${test.report.dir}" />
-	<junit fork="true" printSummary="true" showOutput="false">
-	    <assertions>
-		<enable />
-	    </assertions>
-            <formatter type="plain" />
+    <!--<target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>-->
+
+    <!--<target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">-->
+        <!--<copy todir="${ant.library.dir}">-->
+            <!--<fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>-->
+        <!--</copy>-->
+        <!--<unzip dest="${ant.library.dir}">-->
+            <!--<patternset includes="jdtCompilerAdapter.jar"/>-->
+            <!--<fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>-->
+        <!--</unzip>-->
+    <!--</target>-->
+
+    <!--<target description="compile project with Eclipse compiler" name="build-eclipse-compiler">-->
+        <!--<property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>-->
+        <!--<antcall target="build"/>-->
+    <!--</target>-->
+
+    <target description="Run all JUnit tests" depends="build" name="tests">
+        <property name="test.report.dir" value="test/output"/>
+        <mkdir dir="${test.report.dir}"/>
+        <junit fork="true" printSummary="true" showOutput="false">
+            <assertions>
+            <enable /> <!-- some assertions fail currently (March 11 2010) -->
+            </assertions>
+            <formatter type="plain"/>
             <classpath refid="CPAchecker.classpath"/>
-            <batchtest fork="true" todir="${test.report.dir}" >
+            <batchtest fork="true" todir="${test.report.dir}">
                 <fileset dir="${basedir}/bin">
-                    <include name="**/*Test.*" />
-		    <exclude name="**/*$*Test.*" />
-		    <exclude name="octagon/OctLibraryTest.class" />
+                    <include name="**/*Test.*"/>
+                    <exclude name="**/*$*Test.*"/>
+                    <exclude name="octagon/OctLibraryTest.class"/>
                 </fileset>
             </batchtest>
         </junit>
