--- a/test/config/observerAnalysis.properties
+++ b/test/config/observerAnalysis.properties
@@ -2,5 +2,6 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.observeranalysis.ObserverAutom
 
 #observerAnalysis.inputFile =  test/programs/observerAutomata/LoopAutomaton.txt
 #observerAnalysis.inputFile =  test/programs/observerAutomata/LockingAutomatonAstComp.txt
-observerAnalysis.inputFile =  test/programs/observerAutomata/LockingAutomatonExactMatch.txt
+#observerAnalysis.inputFile =  test/programs/observerAutomata/LockingAutomatonExactMatch.txt
 #observerAnalysis.inputFile =  test/programs/observerAutomata/LockingAutomatonRegEx.txt
+observerAnalysis.inputFile =  test/programs/observerAutomata/LockingAutomatonAll.txt
