Location Analysis supports queries; simple test of the functionName query
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1241 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/observerAnalysis.properties
+++ b/test/config/observerAnalysis.properties
@@ -4,4 +4,8 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.observeranalysis.ObserverAutom
 #observerAnalysis.inputFile =  test/programs/observerAutomata/LockingAutomatonAstComp.txt
 #observerAnalysis.inputFile =  test/programs/observerAutomata/LockingAutomatonExactMatch.txt
 #observerAnalysis.inputFile =  test/programs/observerAutomata/LockingAutomatonRegEx.txt
-observerAnalysis.inputFile =  test/programs/observerAutomata/LockingAutomatonAll.txt
+#observerAnalysis.inputFile =  test/programs/observerAutomata/LockingAutomatonAll.txt
+observerAnalysis.inputFile =  test/programs/observerAutomata/FunctionIdentifyingAutomaton.txt
+
+#log.consoleLevel = FINER
+log.consoleLevel = INFO
