git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1399 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/observerAnalysis.properties
+++ b/test/config/observerAnalysis.properties
@@ -7,4 +7,7 @@ observerAnalysis.inputFile =     test/programs/observerAutomata/modifyingAutomat
 log.consoleLevel =       INFO
 cpas.explicit.threshold = 2000
 
+cfa.export = true
+cfa.file = cfa.dot
+
 #log.consoleLevel = FINER
