--- a/test/config/observerAnalysis.properties
+++ b/test/config/observerAnalysis.properties
@@ -1,9 +1,9 @@
 #CompositeCPA.cpas = cpa.location.LocationCPA, cpa.observeranalysis.ObserverAutomatonCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.pointeranalysis.PointerAnalysisCPA, cpa.uninitvars.UninitializedVariablesCPA, cpa.types.TypesCPA
 #CompositeCPA.cpas = cpa.location.LocationCPA, cpa.observeranalysis.ObserverAutomatonCPA, cpa.uninitvars.UninitializedVariablesCPA, cpa.types.TypesCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.observeranalysis.ObserverAutomatonCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.automatonanalysis.ControlAutomatonCPA
 
-observerAnalysis.inputFile =     test/programs/observerAutomata/modifyingAutomaton.txt
+automatonAnalysis.inputFile =     test/config/automata/modifyingAutomaton.txt
 log.consoleLevel =       INFO
 cpas.explicit.threshold = 2000
 
