Made CPAchecker a Eclipse Plugin, that is used by CPAcheckerPlugin (libraries do not need to be copied, CPAchecker changes are usable at once)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1414 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,5 @@
 output.. = bin/
-bin.includes = plugin.xml,\
-               META-INF/,\
+bin.includes = META-INF/,\
                .classpath,\
                .project,\
                build.properties,\
