add call of FQL2 build.xml to main build.xml
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1417 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -25,6 +25,7 @@
     <target name="build-subprojects">
 	    <ant antfile="src/org/sosy_lab/cpachecker/cpa/automatonanalysis/AutomatonBuild.xml" inheritAll="false"/>
 	    <ant antfile="src/org/sosy_lab/cpachecker/fllesh/fql/frontend/parser/build.xml" inheritAll="false"/>
+	    <ant antfile="src/org/sosy_lab/cpachecker/fllesh/fql2/parser/build.xml" inheritAll="false"/>
     </target>
 
     <target depends="init" name="build-project">
