EVAL keyword for Automata   	ASSERT CHECK(ExplicitAnalysis("c==0"))   is equal to  	ASSERT EVAL(ExplicitAnalysis("c"))==0
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1447 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/observerAnalysis.properties
+++ b/test/config/observerAnalysis.properties
@@ -1,13 +1,13 @@
-#CompositeCPA.cpas = cpa.location.LocationCPA, cpa.observeranalysis.ObserverAutomatonCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.pointeranalysis.PointerAnalysisCPA, cpa.uninitvars.UninitializedVariablesCPA, cpa.types.TypesCPA
-#CompositeCPA.cpas = cpa.location.LocationCPA, cpa.observeranalysis.ObserverAutomatonCPA, cpa.uninitvars.UninitializedVariablesCPA, cpa.types.TypesCPA
+#CompositeCPA.cpas = cpa.location.LocationCPA,cpa.observeranalysis.ObserverAutomatonCPA,cpa.explicit.ExplicitAnalysisCPA,cpa.pointeranalysis.PointerAnalysisCPA,cpa.uninitvars.UninitializedVariablesCPA, cpa.types.TypesCPA
+#CompositeCPA.cpas = cpa.location.LocationCPA,cpa.observeranalysis.ObserverAutomatonCPA,cpa.uninitvars.UninitializedVariablesCPA, cpa.types.TypesCPA
+CompositeCPA.cpas = cpa.location.LocationCPA,cpa.automatonanalysis.ObserverAutomatonCPA,cpa.explicit.ExplicitAnalysisCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.automatonanalysis.ControlAutomatonCPA
+automatonAnalysis.inputFile = test/config/automata/TestAutomaton.txt
 
-automatonAnalysis.inputFile =     test/config/automata/modifyingAutomaton.txt
-log.consoleLevel =       INFO
+#log.consoleLevel =       INFO
 cpas.explicit.threshold = 2000
+
+log.consoleLevel = FINER 
 
 cfa.export = true
 cfa.file = cfa.dot
-
-#log.consoleLevel = FINER
