Multiple Tasks are run sequentially (parallel doesn't work yet because of static logger in cpachecker) Tasks are assigned unique Names
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1456 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/plugin/CPAcheckerPlugin/plugin.xml
+++ b/plugin/CPAcheckerPlugin/plugin.xml
@@ -22,9 +22,10 @@
 	<extension point="org.eclipse.ui.newWizards">
       <category
             name="CPAchecker"
-            id="org.sosy_lab.cpachecker.plugin.eclipse.catMain">
+            id="org.sosy_lab.cpachecker.plugin.eclipse.wizards">
       </category>
       <wizard
+      		category="org.sosy_lab.cpachecker.plugin.eclipse.wizards"
             name="new CPAchecker Task"
             icon="$nl$/icons/sample.gif"
             class="org.sosy_lab.cpachecker.plugin.eclipse.wizards.NewTaskCreationWizard"
