add and remove configurations so that the remaining symbpredabsCPA configurations are those that were used for the tables in the ABE paper
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/abe@1457 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA-10-lbe-threshold-entailment.properties
+++ b/test/config/symbpredabsCPA-10-lbe-threshold-entailment.properties
@@ -15,7 +15,8 @@ ARTCPA.cpa = compositeCPA.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.errorlocation.ErrorLocationCPA, cpa.symbpredabsCPA.SymbPredAbsCPA
 
-cpas.symbpredabs.blk.threshold = 300
-cpas.symbpredabs.blk.functions = false
-cpas.symbpredabs.blk.loops = false
+cpas.symbpredabs.blk.threshold = 10
+cpas.symbpredabs.blk.functions = true
+cpas.symbpredabs.blk.loops = true
 cpas.symbpredabs.blk.requireThresholdAndLBE = false
+cpas.symbpredabs.symbolicCoverageCheck = true
