--- a/test/config/symbpredabsCPA-sbe.properties
+++ b/test/config/symbpredabsCPA-sbe.properties
@@ -1,8 +1,8 @@
 # only paths to error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
-# topsort is better than dfs if elements may be merged
-analysis.traversal = topsort
+# dfs is better than topsort if elements are be merged
+analysis.traversal = dfs
 
 analysis.useRefinement = true
 
@@ -15,7 +15,10 @@ ARTCPA.cpa = compositeCPA.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.errorlocation.ErrorLocationCPA, cpa.symbpredabsCPA.SymbPredAbsCPA
 
-cpas.symbpredabs.blk.threshold = 100
+cpas.symbpredabs.abstraction.cartesian = true
+
+cpas.symbpredabs.blk.threshold = 1
 cpas.symbpredabs.blk.functions = false
 cpas.symbpredabs.blk.loops = false
 cpas.symbpredabs.blk.requireThresholdAndLBE = false
+cpas.symbpredabs.symbolicCoverageCheck = true
