Plugin: Icons & other changes
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1481 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/plugin/CPAcheckerPlugin/plugin.xml
+++ b/plugin/CPAcheckerPlugin/plugin.xml
@@ -86,7 +86,7 @@
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
-            name="CPAPlugin"
+            name="CPAcheckerPlugin"
             class="org.sosy_lab.cpachecker.plugin.eclipse.preferences.CPAPreferencePage"
             id="org.sosy_lab.cpachecker.plugin.eclipse.preferences.CPAPreferencePage">
       </page>
