Plugin: listed the Main Logo in plugin.xml
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1503 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/plugin/CPAcheckerPlugin/plugin.xml
+++ b/plugin/CPAcheckerPlugin/plugin.xml
@@ -15,6 +15,7 @@
 		</category>
 		<view
 			name="CPAchecker Tasks View"
+			icon="icons/MainLogo.gif"
 			category="org.sosy_lab.cpachecker.plugin.eclipse.catMain"
 			class="org.sosy_lab.cpachecker.plugin.eclipse.views.TasksView"
 			id="org.sosy_lab.cpachecker.plugin.eclipse.views.TasksView">
