--- a/test/config/explicitAnalysisJoin.properties
+++ b/test/config/explicitAnalysisJoin.properties
@@ -4,8 +4,11 @@ cfa.removeIrrelevantForErrorLocations = true
 # topsort is better than dfs if elements may be merged
 analysis.traversal = topsort
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.errorlocation.ErrorLocationCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.automatonanalysis.ObserverAutomatonCPA ErrorLocationAutomaton
 
 cpas.explicit.merge = join
 
 cpas.explicit.threshold = 2000
+
+# this automaton defines which locations are the error locations
+ErrorLocationAutomaton.automatonAnalysis.inputFile = test/config/automata/ErrorLocationAutomaton.txt
