--- a/test/config/pointerAnalysis.properties
+++ b/test/config/pointerAnalysis.properties
@@ -1,3 +1,6 @@
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.types.TypesCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.pointeranalysis.PointerAnalysisCPA, cpa.errorlocation.ErrorLocationCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.types.TypesCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.pointeranalysis.PointerAnalysisCPA, cpa.automatonanalysis.ObserverAutomatonCPA ErrorLocationAutomaton
 
 cpas.explicit.threshold = 10
+
+# this automaton defines which locations are the error locations
+ErrorLocationAutomaton.automatonAnalysis.inputFile = test/config/automata/ErrorLocationAutomaton.txt
