--- a/test/config/predabst.properties
+++ b/test/config/predabst.properties
@@ -10,10 +10,13 @@ cpa = cpa.art.ARTCPA
 
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.errorlocation.ErrorLocationCPA, cpa.predicateabstraction.PredicateAbstractionCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.automatonanalysis.ObserverAutomatonCPA ErrorLocationAutomaton, cpa.predicateabstraction.PredicateAbstractionCPA
 
 # merge-sep for ARTCPA is possible because the other CPAs also have merge-sep, and it's faster
 cpas.art.merge = sep
+
+# this automaton defines which locations are the error locations
+ErrorLocationAutomaton.automatonAnalysis.inputFile = test/config/automata/ErrorLocationAutomaton.txt
 
 # whether to use a Boolean or a Cartesian abstraction
 cpas.symbpredabs.abstraction.cartesian = true
