--- a/test/config/symbpredabsCPA-sbe.properties
+++ b/test/config/symbpredabsCPA-sbe.properties
@@ -13,7 +13,10 @@ cpa = cpa.art.ARTCPA
 
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.errorlocation.ErrorLocationCPA, cpa.symbpredabsCPA.SymbPredAbsCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.automatonanalysis.ObserverAutomatonCPA ErrorLocationAutomaton, cpa.symbpredabsCPA.SymbPredAbsCPA
+
+# this automaton defines which locations are the error locations
+ErrorLocationAutomaton.automatonAnalysis.inputFile = test/config/automata/ErrorLocationAutomaton.txt
 
 cpas.symbpredabs.abstraction.cartesian = true
 
