Plugin: Tabular Editor for "properties" Files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1577 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/plugin/CPAcheckerPlugin/plugin.xml
+++ b/plugin/CPAcheckerPlugin/plugin.xml
@@ -40,12 +40,13 @@
     <extension
          point="org.eclipse.ui.editors">
       <editor
-            name="Property File GUI Editor"
-            icon="icons/config.gif"
-            extensions="properties"
+            class="org.sosy_lab.cpachecker.plugin.eclipse.editors.propertieseditor.PropertiesTableEditor"
             contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
-            class="org.sosy_lab.cpachecker.plugin.eclipse.editors.propertieseditor.PropertiesEditor"
-            id="org.sosy_lab.cpachecker.plugin.eclipse.editors.propertieseditor.PropertiesEditor">
+            default="true"
+            extensions="properties"
+            icon="icons/config.gif"
+            id="org.sosy_lab.cpachecker.plugin.eclipse.editors.propertieseditor.PropertiesTableEditor"
+            name="PropertiesTableEditor">
       </editor>  	
       	<editor
             name="Automaton Editor"
