--- a/plugin/CPAcheckerPlugin/preferences.ini
+++ b/plugin/CPAcheckerPlugin/preferences.ini
@@ -1,6 +1,37 @@
 propEditor.seperator = ;
 propEditor.key.output.path = test/output/;
 propEditor.key.output.path.description = Path for OutputFiles, relative to the Project of the config File
+
 propEditor.key.log.file = CPALog.txt;
 propEditor.key.log.file.description = Name of the Logfile (in Output Directory)
+
 propEditor.key.log.level = OFF;SEVERE;WARNING;INFO;FINE;FINER;FINEST;ALL
+propEditor.key.log.level.description = log level of file output
+
+propEditor.key.log.consoleLevel = OFF;SEVERE;WARNING;INFO;FINE;FINER;FINEST;ALL
+propEditor.key.log.consoleLevel.description = log level of console output
+
+propEditor.key.cpa = cpa.composite.CompositeCPA
+propEditor.key.cpa.description = Which CPA to use?
+
+propEditor.key.cfa.export = true;false
+propEditor.key.cfa.description = if the cfa should be exported
+propEditor.key.cfa.file = cfa.dot;
+propEditor.key.cfa.description = fileName of the exported CFA (cfa.export must be set to true)
+
+propEditor.key.analysis.stopAfterError = true;false
+propEditor.key.analysis.stopAfterError.description = stop after the first error has been found
+
+propEditor.key.reachedSet.export = true;false
+propEditor.key.reachedSet.export.description = exprot the reached set to .txt?
+propEditor.key.reachedSet.file = reached.txt;
+propEditor.key.reachedSet.file.description = target file name (reachedSet.export must be set to true)
+
+propEditor.key.ART.export = true;false
+propEditor.key.ART.export.description = exprot the ART set to .dot?
+propEditor.key.ART.file = ART.dot;
+propEditor.key.ART.file.description = target file name (ART.export must be set to true and ARTcpa must be used)
+
+propEditor.key.observerAnalysis.inputFile.description = automaton specification for ObserverAnalysisCPA
+
+propEditor.key.observerAnalysis.dotExportFile.description = file for saving the ObserverAutomaton in DOT format, no saving if omitted
